--- a/Start/GisRI.Master
+++ b/Start/GisRI.Master
@@ -140,7 +140,7 @@
                 <a class="logo" href="http://www.ambientesc.it" target="_blank"><img src="/assets/img/ambiente.png" 
 				style="margin:4px 7px 5px 5px;">
                 </a> 
-                <a class="logo" id="div_collaudo" runat="server">
+                <a class="logo hidden-xs" id="div_collaudo" runat="server">
                     <img src="/images/SitoTest.png" height="30" style="margin:0px 7px 6px 5px;" />
                 </a> 
 				<a href="http://www.ambientesc.it"  target="_blank" class="logo" style="color:#000;"><b>Ri.-C.O.R.D.A.</b> </a>
@@ -195,7 +195,8 @@
                         <li>
                             <asp:LinkButton ID="lnk_supporto" CssClass="help" ToolTip="Supporto on line" runat="server" OnClientClick="NewWindows('../Messaggi/Supporto.aspx','_Supporto',600,800,'no'); return false;"><i class="fa fa-life-ring"></i></asp:LinkButton>
                         </li>
-                        <li><a class="logout" href="../Start/Logout.aspx">Esci</a></li>
+                        <li class="visible-xs-inline"><a class="logout" href="../Start/Logout.aspx"><i class="fa fa-sign-out"></i></a></li>
+                        <li class="hidden-xs"><a class="logout" href="../Start/Logout.aspx">Esci</a></li>
                     </ul>
                 </div>
                 </ContentTemplate></asp:UpdatePanel>
