--- a/assets/css/Intest.css
+++ b/assets/css/Intest.css
@@ -26,6 +26,7 @@ body:after {
     right: 0;
     height: 10px;
     bottom: 0;
+    z-index: 10;
 }
 body:before {
     content: "";
@@ -35,6 +36,7 @@ body:before {
     right: 0;
     height: 10px;
     top: 0;
+    z-index: 10;
 }
 body {
     box-shadow: inset 0 0 0 10px #D00;
