--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,14 +1,422 @@
-@media (min-width: 980px) {
+.overflow {
+    overflow: auto;
+    width: 100%;
+    box-sizing: border-box;
+}
+.content-panel {
+    margin-top: 10px;
+    padding: 10px;
+}
+.table-inbox-wrap {
+    margin: 0;
+}
+header {
+    background-size: cover;
+    background-color: #fff;
 }
 
-@media (min-width: 768px) and (max-width: 979px) {
-}
-
-@media (max-width: 768px) {
-}
-
-@media (max-width: 480px) {
+.form-login {
+    margin: 10% auto 0;
 }
 
 @media (max-width:320px) {
+    
+    ul.top-menu > li > .logout {
+        /* color: #94590b; */
+        font-size: 19px;
+        color:Orange;
+        border-radius: 4px;
+        -webkit-border-radius: 4px;
+        border: 1px solid #A3A3A3 !important;
+        padding: 4px 4px;
+        margin-right: 15px;
+        background: #fff;
+        margin-top: 15px;
+    }
+    
+    .head-menu {
+        text-align: center;
+    }
+    .side-col {
+        padding-left: 15px;
+        padding-top: 15px;
+    }
+    .table-container {
+        overflow:auto;
+        text-align: left;
+    }
+    
+    
+    /* tabella depositi temporanei */
+    
+    .progress {
+        position: relative;
+    }
+    .gisri_progress_label {
+        top: 2px;
+        left: 0;
+        margin-top: 0;
+    }
+    
+    .recent-activity tr > td{
+        width: 20px;
+        vertical-align: middle;
+        white-space: nowrap;
+    }
+    .recent-activity tr td:first-child{
+        display: none;
+    }
+    .recent-activity .activity-panel{
+        padding: 5px;
+    }
+    .recent-activity .head{
+        border: none !important;
+        padding-right: 0;
+
+    }
+    .recent-activity .activity-icon {
+        margin: 20px 0;
+
+    }
+    .recent-activity .body {
+        border: none !important;
+
+    }
+    
+    
+    /* sezione configurazione */
+    
+    .conf-menu {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+    
+    .conf-content {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
 }
+
+@media (max-width: 480px) {
+    ul.top-menu > li > .logout {
+        /* color: #94590b; */
+        font-size: 19px;
+        color:Orange;
+        border-radius: 4px;
+        -webkit-border-radius: 4px;
+        border: 1px solid #A3A3A3 !important;
+        padding: 4px 4px;
+        margin-right: 15px;
+        background: #fff;
+        margin-top: 15px;
+    }
+    .head-menu {
+        text-align: center;
+        box-sizing: 
+    }
+    .side-col {
+        padding-left: 15px;
+        padding-top: 15px;
+    }
+    .table-container {
+        overflow:auto;
+        text-align: left;
+    }
+    
+    
+    /* tabella depositi temporanei */
+    
+    .progress {
+        position: relative;
+    }
+    .gisri_progress_label {
+        top: 2px;
+        left: 0;
+        margin-top: 0;
+    }
+    .recent-activity tr > td{
+        width: 20px;
+        vertical-align: middle;
+        white-space: nowrap;
+    }
+    .recent-activity tr td:first-child{
+        display: none;
+    }
+
+    .recent-activity .head{
+        border: none !important;
+        padding-right: 0;
+
+    }
+    .recent-activity .activity-icon {
+        margin: 20px 0;
+
+    }
+    .recent-activity .body {
+        border: none !important;
+
+    }
+    
+    /* sezione configurazione */
+
+    .conf-menu {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+
+    .conf-content {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+}
+
+@media (max-width: 768px) {
+    ul.top-menu > li > .logout {
+        /* color: #94590b; */
+        font-size: 19px;
+        color:Orange;
+        border-radius: 4px;
+        -webkit-border-radius: 4px;
+        border: 1px solid #A3A3A3 !important;
+        padding: 4px 4px;
+        margin-right: 15px;
+        background: #fff;
+        margin-top: 15px;
+    }
+    .content-panel > .btn {
+        text-align: center;
+    }
+    .side-col {
+        padding-left: 15px;
+        padding-top: 15px;
+    }
+    .recent-activity td:first-child {
+        margin-left: 10px;
+    }
+
+    
+    /* tabella depositi temporanei */
+
+    .progress {
+        position: relative;
+    }
+    .gisri_progress_label {
+        top: 2px;
+        left: 0;
+        margin-top: 0;
+    }
+    .recent-activity tr > td{
+        width: 20px;
+        vertical-align: middle;
+        white-space: nowrap
+    }
+
+    .recent-activity .head{
+        border-left: 10px solid #fff;
+        padding-right: 5px;
+
+    }
+    .recent-activity .activity-icon {
+        margin: 20px 0;
+
+    }
+    .recent-activity .body {
+        border-left: 10px solid #000000;
+
+    }
+    
+    /* sezione configurazione */
+
+    .conf-menu {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+
+    .conf-content {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 979px) {
+    .content-panel > .btn {
+        text-align: left;
+    }
+    .side-col {
+        padding-left: 15px;
+        padding-top: 15px;
+    }
+    .table-container {
+        overflow:auto;
+        text-align: left;
+    }
+    
+    
+    /* tabella depositi temporanei */
+
+    .progress {
+        position: relative;
+    }
+    .gisri_progress_label {
+        top: 2px;
+        left: 0;
+        margin-top: 0;
+    }
+    .recent-activity tr > td{
+        width: 20px;
+        vertical-align: middle;
+        white-space: nowrap
+    }
+
+    .recent-activity .head{
+        border-left: 10px solid #fff;
+        padding-right: 5px;
+
+    }
+    .recent-activity .activity-icon {
+        margin: 20px 0;
+
+    }
+    .recent-activity .body {
+        border-left: 10px solid #000000;
+
+    }
+    
+    
+    /* sezione configurazione */
+
+    .conf-menu {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+
+    .conf-content {
+        padding-left: 15px;
+        padding-right: 0px;
+    }
+}
+
+@media (min-width: 980px) {
+    .content-panel > .btn {
+        text-align: left;
+    }
+    .side-col {
+        padding-left: 15px;
+        padding-top: 15px;
+    }
+    .table-container {
+        overflow:auto;
+        text-align: left;
+    }
+    
+    
+    /* tabella depositi temporanei */
+
+    .progress {
+        position: relative;
+    }
+    .gisri_progress_label {
+        top: 2px;
+        left: 0;
+        margin-top: 0;
+    }
+    .recent-activity tr > td{
+        width: 20px;
+        vertical-align: middle;
+        white-space: nowrap
+    }
+
+    .recent-activity .head{
+        border-left: 10px solid #fff;
+        padding-right: 5px;
+
+    }
+    .recent-activity .activity-icon {
+        margin: 20px 0;
+
+    }
+    .recent-activity .body {
+        border-left: 10px solid #000000;
+
+    }
+    
+    
+    /* sezione configurazione */
+
+    .conf-menu {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+
+    .conf-content {
+        padding-left: 15px;
+        padding-right: 0px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .content-panel > .btn {
+        text-align: left;
+    }
+    .side-col {
+        padding-left: 0;
+        padding-top: 0;
+    }
+    .table-container {
+        overflow:auto;
+        text-align: left;
+    }
+    
+    
+    /* tabella depositi temporanei */
+
+    .progress {
+        position: relative;
+    }
+    .gisri_progress_label {
+        top: 2px;
+        left: 0;
+        margin-top: 0;
+    }
+    .recent-activity tr > td{
+        width: 20px;
+        vertical-align: middle;
+        white-space: nowrap
+    }
+    
+    .recent-activity .head{
+        border-left: 10px solid #fff;
+        padding-right: 5px;
+        
+    }
+    .recent-activity .activity-icon {
+        margin: 20px 0;
+
+    }
+    .recent-activity .body {
+        border-left: 10px solid #000000;
+        
+    }
+    
+    
+    /* sezione configurazione */
+
+    .conf-menu {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+
+    .conf-content {
+        padding-left: 15px;
+        padding-right: 0px;
+    }
+}
+
+
+
+
+
+
+
+
+
