--- a/Start/GisRI.Master
+++ b/Start/GisRI.Master
@@ -9,6 +9,8 @@
 <head runat="server">
     <title>Ri.-C.O.R.D.A. by ambiente sc</title>
 
+    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html;charset=ISO-8859-1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
     <meta name="author" content="Mesys S.r.l." />
@@ -287,7 +289,7 @@
           <footer class="site-footer">
                 <div class="text-center">
                     <a href="http://www.ambientesc.it" style="color:#FFF;">ambiente s.c.</a> | Via Frassina, 21 | 54033 Carrara (MS) |
-					Tel. 0585 855632 | fax 0585 855617 - P. IVA nÂ°: 00262540453
+					Tel. 0585 855632 | fax 0585 855617 - P. IVA n°: 00262540453
                     <a href="#" class="go-top" style="margin: 0 20px;">
                         <i class="fa fa-angle-up"></i>
                     </a>
