--- a/Start/GisRI.Master
+++ b/Start/GisRI.Master
@@ -49,7 +49,7 @@
     <script src="../assets/js/jquery-ui-1.9.2.custom.min.js" type="text/javascript"></script>
 
     <script src="../assets/js/chart-master/Chart.js" type="text/javascript"></script>
-	
+
     <script src="../assets/plugins/bootstrap-switch/js/bootstrap-switch.js" type="text/javascript"></script>
     <script src="../assets/plugins/jquery.dirtyforms/jquery.dirtyforms.js" type="text/javascript"></script>
     <script type="text/javascript" src="../assets/plugins/select2/select2.min.js"></script>
@@ -116,8 +116,27 @@
                 });
             }
         }
+        var touch = 'ontouchstart' in document.documentElement
+            || (navigator.MaxTouchPoints > 0)
+            || (navigator.msMaxTouchPoints > 0);
 
-        
+        if (touch) { // remove all :hover stylesheets
+            try { // prevent exception on browsers not supporting DOM styleSheets properly
+                for (var si in document.styleSheets) {
+                    var styleSheet = document.styleSheets[si];
+                    if (!styleSheet.rules) continue;
+
+                    for (var ri = styleSheet.rules.length - 1; ri >= 0; ri--) {
+                        if (!styleSheet.rules[ri].selectorText) continue;
+
+                        if (styleSheet.rules[ri].selectorText.match(':hover')) {
+                            styleSheet.deleteRule(ri);
+                        }
+                    }
+                }
+            } catch (ex) {}
+        }
+
     </script>
 
 
@@ -128,7 +147,7 @@
     <form id="frmPrincipale" runat="server">
         <telerik:RadScriptManager ID="RadScriptManager1" runat="server" EnableScriptGlobalization="true" EnablePageMethods="true"
             EnableScriptLocalization="true" AsyncPostBackTimeout="3600" ></telerik:RadScriptManager>
-        
+
         <section id="container" >
             <!-- **********************************************************************************************************************************************************
             TOP BAR CONTENT & NOTIFICATIONS
@@ -139,12 +158,12 @@
                     <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Abilta/Disabilita menu" style="color:#000;"></div>
                 </div>
                 <!--logo start-->
-                <a class="logo" href="http://www.ambientesc.it" target="_blank"><img src="/assets/img/ambiente.png" 
+                <a class="logo" href="http://www.ambientesc.it" target="_blank"><img src="/assets/img/ambiente.png"
 				style="margin:4px 7px 5px 5px;">
-                </a> 
+                </a>
                 <a class="logo hidden-xs" id="div_collaudo" runat="server">
                     <img src="/images/SitoTest.png" height="30" style="margin:0px 7px 6px 5px;" />
-                </a> 
+                </a>
 				<a href="http://www.ambientesc.it"  target="_blank" class="logo" style="color:#000;"><b>Ri.-C.O.R.D.A.</b> </a>
                 <!--logo end-->
                 <div class="nav notify-row" id="top_menu">
@@ -204,7 +223,7 @@
                 </ContentTemplate></asp:UpdatePanel>
             </header>
             <!--header end-->
-      
+
             <!-- **********************************************************************************************************************************************************
             MAIN SIDEBAR MENU
             *********************************************************************************************************************************************************** -->
@@ -236,10 +255,10 @@
                                         <FooterTemplate>
                                             </ul>
                                         </FooterTemplate>
-                                    </asp:Repeater>              	  	
+                                    </asp:Repeater>
                                 </li>
                             </ItemTemplate>
-                        </asp:Repeater>              	  	
+                        </asp:Repeater>
                     </ul>
                     <!-- sidebar menu end-->
                 </div>
@@ -266,7 +285,7 @@
                             border-color: #1265ab; background-color: White;">
                             <tr>
                                 <td style="width:10px;">&nbsp;
-                                </td> 
+                                </td>
                                 <td style="padding-left:10px; padding-right:10px;">
                                     <asp:Image ID="imgLogo" runat="server" ImageAlign="AbsMiddle" ImageUrl="..\Favicon\apple-icon-72x72.png"
                                         Width="32px" />
@@ -289,7 +308,7 @@
           <footer class="site-footer">
                 <div class="text-center">
                     <a href="http://www.ambientesc.it" style="color:#FFF;">ambiente s.c.</a> | Via Frassina, 21 | 54033 Carrara (MS) |
-					Tel. 0585 855632 | fax 0585 855617 - P. IVA n°: 00262540453
+					Tel. 0585 855632 | fax 0585 855617 - P. IVA nï¿½: 00262540453
                     <a href="#" class="go-top" style="margin: 0 20px;">
                         <i class="fa fa-angle-up"></i>
                     </a>
@@ -303,7 +322,7 @@
     </form>
 
     <!-- js placed at the end of the document so the pages load faster -->
-    
+
     <script src="../assets/js/jquery.dcjqaccordion.2.7.js" class="include" type="text/javascript" ></script>
     <script src="../assets/js/jquery.scrollTo.min.js" type="text/javascript"></script>
     <script src="../assets/js/jquery.nicescroll.js" type="text/javascript"></script>
