--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,9 +1,18 @@
 .tab-font {
     font-size: 16px !important;
 }
-
+.panel-heading, .panel-body {
+    padding-left: 0;
+    padding-right: 0;
+}
+.recent-activity:before {
+    left: 19px;
+}
 .btn {
     white-space: normal !important;
+}
+.button-link-w {
+    white-space: nowrap !important;
 }
 .overflow {
     overflow: auto;
@@ -24,6 +33,7 @@
 .login .form-login {
     margin: 10% auto 0;
 }
+
 .recent-activity .activity-panel {
     width: 100%;
 }
@@ -85,7 +95,7 @@
 
     .recent-activity .activity-icon {
         margin: 20px 0;
-
+        margin-left: 5px;
     }
     .recent-activity .body {
         border: none !important;
@@ -107,6 +117,11 @@
 }
 
 @media (max-width: 480px) {
+    .smoke-base .dialog {
+        top:20%;
+        left: 0;
+        width: auto;
+    }
     .input-group {
         margin-bottom: 3px !important;
     }
@@ -165,7 +180,7 @@
 
     .recent-activity .activity-icon {
         margin: 20px 0;
-
+        margin-left: 5px;
     }
     .recent-activity .body {
         border: none !important;
@@ -228,7 +243,7 @@
 
     .recent-activity .activity-icon {
         margin: 20px 0;
-
+        margin-left: 5px;
     }
     .recent-activity .body {
         border-left: 10px solid #000000;
@@ -281,7 +296,7 @@
     }
     .recent-activity .activity-icon {
         margin: 20px 0;
-
+        margin-left: 5px;
     }
     .recent-activity .body {
         border-left: 10px solid #000000;
@@ -330,7 +345,7 @@
 
     .recent-activity .activity-icon {
         margin: 20px 0;
-
+        margin-left: 5px;
     }
     .recent-activity .body {
         border-left: 10px solid #000000;
@@ -373,7 +388,7 @@
 
     .recent-activity .activity-icon {
         margin: 20px 0;
-
+        margin-left: 5px;
     }
     .recent-activity .body {
         border-left: 10px solid #000000;
